2002-02-03  Adam Fedor  <fedor@gnu.org>

	* configure.in: Remove setting of GCC_SO_DIR. Remove CPPFLAGS
	and LDFLAGS with GNUSTEP paths in them since they are already
	included in default rules. Set OBJC_CPPFLAGS/LDFLAGS for objc 
	thread test.
	* GNUstep.csh.in: Remove GCC_SO_DIR
	* GNUstep.sh.in: Likewise.
	* ld_lib_path.csh: Likewise.
	* ld_lib_path.sh: Likewise.

	* Documentation/userfaq.texi: New file.
	
Sat Feb  2 10:54:35 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUstep.sh.in (GNUSTEP_USER_ROOT): Fixed typo.
	* GNUstep.csh.in: Idem.
	
Fri Feb  1 11:33:11 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Master/aggregate.make: New file with code taken from
	aggregate.make.
	* aggregate.make: If this is a Master invocation, include
	Master/aggregate.make, otherwise include nothing.
	* GNUmakefile.in (MASTER_MAKE_FILES): Install aggregate.make.
	
2002-02-01 Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakeifle: install Master and Instance versions of
	application.make

Thu Jan 31 17:47:39 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Master/application.make (APP_EXTENSION): Set it in common.make,
	so that it can be overridden at will.
	* Instance/application.make (INTERNAL_app_NAME, TARGET): Replaced
	everywhere by GNUSTEP_INSTANCE.
	
Thu Jan 31 17:38:17 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* application.make: Replaced with a makefile which includes
	Master/application.make or Instance/application.make or nothing
	depending on case.  The original code broken in two and move into
	Master/application.make and Instance/application.make.
	* Master/application.make: New file.
	* Instance/application.make: new file.
	* GNUmakefile.in: Install the new files.
	
Thu Jan 31 11:27:06 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* configure.in: Moved determination of host, target and build
	system at the beginning of the file, so that any GNUstep test can
	use this knowledge.
	* configure.in (OBJC_RUNTIME_LIB): Use -F- option to awk rather